Feature: provide fountain metadata from server.
